--- a/latex-report-template/full-demo/math/derivation.tex
+++ b/latex-report-template/full-demo/math/derivation.tex
@@ -1,3 +1,5 @@
+\eceSubsection{Derivation of Formulas for Outputs}
+
 Derive formula for $\theta$ from system of intuitive equations
 for $t_f$ and $x_f$:
 $$\begin{cases}
