--- a/latex-report-template/full-demo/math/sine-approximation.tex
+++ b/latex-report-template/full-demo/math/sine-approximation.tex
@@ -1,3 +1,5 @@
+\eceSubsection{Sine Approximation}
+
 Bhaskara I's sine approximation formula:
 $$ \sin x \approx \text{Bhaskara}(x) = 
 \frac{4 x \left( 180 - x  \right)}
