--- a/latex-report-template/full-demo/tables/system.tex
+++ b/latex-report-template/full-demo/tables/system.tex
@@ -1,8 +1,7 @@
 \begin{table}[H]
 \begin{center}
 
-\caption{\small Cells merged 
-using \texttt{multirow}}
+\caption{\small System of equations resolved for the four source pairings}
 
 \vspace{5mm}
 
