--- a/latex-report-template/full-demo/tables/variables-explained.tex
+++ b/latex-report-template/full-demo/tables/variables-explained.tex
@@ -1,7 +1,7 @@
 \begin{table}[H]
 \begin{center}
 
-\caption{\small Another variables summary}
+\caption{\small Variables explanation}
 
 \vspace{5mm}
 
