--- a/latex-report-template/3-tools-used.tex
+++ b/latex-report-template/3-tools-used.tex
@@ -1,5 +1,9 @@
+\eceSection{Tools Used}
+
 \begin{itemize}
 	\item Python 3.7.2
 	\item MARS (MIPS Assembler and Runtime Simulator) Release 4.5
-	\item This report typeset with \LaTeX
+	\item MATLAB with Simulink
+	\item Circuits lab
+	\item Typeset with \LaTeX
 \end{itemize}
